@@ -14,6 +14,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / runtime requires]
  - constant
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.0001002
+
 0.005002 2016-09-10T06:01:15Z
  [Added / develop requires]
  - English
