@@ -2,32 +2,51 @@ use strict;
 use warnings;
 
 use Test::More;
-use Dist::Zilla::Util::Test::KENTNL 1.0001002 qw( dztest );
-use Test::DZil qw( simple_ini );
+use Path::Tiny qw( path );
+use Test::DZil qw( simple_ini Builder );
 
 # ABSTRACT: basic test
 
 my $ini = simple_ini( ['Author::KENTNL::RecommendFixes'] );
-my $dz = dztest();
-
-$dz->add_file( 'dist.ini',                         $ini );
-$dz->add_file( 'lib/Dist/Zilla/Plugin/Example.pm', q[] );
-$dz->add_file( 't/basic.t',                        q[] );
-$dz->add_file( 'maint/perlcritic.rc.gen.pl',       q[] );
-$dz->add_file( '.git/config',                      q[] );
-$dz->add_file( 'weaver.ini',                       q[] );
-$dz->add_file( 'dist.ini.meta',                    q[] );
-$dz->add_file( '.mailmap',                         q[] );
-$dz->build_ok;
-$dz->has_messages(
-  [
-    [ qr/perltidyrc does not exist/,    'No perltidy' ],
-    [ qr/Changes does not exist/,       'No Changes' ],
-    [ qr/LICENSE does not exist/,       'No LICENSE' ],
-    [ qr/Changes\.deps does not exist/, 'Diff changes' ],
-  ]
+my $tzil = Builder->from_config(
+  { dist_root => 'invalid' },
+  {
+    'add_files' => {
+      path('source/dist.ini') => $ini,
+      map { path( 'source', $_ ) => q[] }
+        qw{
+        lib/.keep
+        lib/Dist/Zilla/Plugin/Example.pm
+        t/basic.t
+        maint/perlcritic.rc.gen.pl
+        .git/config
+        weaver.ini
+        dist.ini.meta
+        .mailmap
+        }
+    },
+  }
 );
 
-note explain $dz->builder->log_messages;
+$tzil->chrome->logger->set_debug(1);
+$tzil->build;
+
+my @messages = (
+  [ qr/perltidyrc does not exist/,    'No perltidy' ],
+  [ qr/Changes does not exist/,       'No Changes' ],
+  [ qr/LICENSE does not exist/,       'No LICENSE' ],
+  [ qr/Changes\.deps does not exist/, 'Diff changes' ],
+);
+
+for my $message (@messages) {
+  ok(
+    do {
+      scalar grep { $_ =~ $message->[0] } @{ $tzil->log_messages };
+    },
+    "Has message for $message->[0]"
+  );
+}
+
+note explain $tzil->log_messages;
 
 done_testing;
