@@ -10,7 +10,10 @@ Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
  - Dependencies changed since 0.005002, see misc/*.deps* for details
  - develop: +1 ↑2
  - runtime: -1
- - test: ↓1
+ - test: ↓1 -1
+
+ [Tests]
+ - Stop using dztest
 
 0.005002 2016-09-10T06:01:15Z fa37013
  [Checks]
